# fdisco-rs

./: Cargo.toml  TODO.md  build.rs
.cargo/: config.toml
examples/: Cargo.toml  README.md
examples/.cargo/: config.toml
src/: display.rs  main.rs  main_back.rs  rcc.rs  sdram.rs
src/image/: convert.py  gui_med.tga  gui_med_com.tga  logo.tga  logo_1.tga  pyproject.toml  test_gui.tga  test_gui_c.tga  tusur_logo_horizontal_main_color_rgb.tga
