[package]
name = "f7disco-rs"
version = "0.1.0"
edition = "2021"
[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "defmt",
    "stm32f746ng",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.6.0", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.4.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embedded-io-async = { version = "0.6.1" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.2.0", features = [
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.1.2"
stm32-fmc = "0.3.0"
embedded-graphics = "0.8"
embedded-alloc = { version = "0.5.1", git = "https://github.com/rust-embedded/embedded-alloc", branch = "master" }
embedded-layout = "0.4"
kolibri-embedded-gui = { git = "https://github.com/Yandrik/kolibri", branch = "main" }
heapless = "0.8.0"
ft5336 = "0.2.0"
static_cell = "2.1.1"
tinybmp = "0.6.0"
tinytga = "0.5.0"

[features]
starter = []

[profile.release]
opt-level="s"
lto = "fat"

[profile.dev]
debug = 2
opt-level="s"
lto = "fat"

[[example]]
name = "display_buttons"
path = "examples/display_buttons.rs"
