[package]
name = "f7disco-rs-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "heapless"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }

cortex-m-rt = "0.7.0"
critical-section = "1.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.1.0" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.7.1", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.4.0", features = [
    "defmt",
    "stm32f746ng",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.7.2", features = [
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.5.0", features = [
    "defmt",
] }
embedded-alloc = { version = "0.6.0", git = "https://github.com/rust-embedded/embedded-alloc", branch = "master" }

# Graphics 
embedded-graphics = "0.8"
embedded-hal = "1.0.0"
embedded-io-async = { version = "0.6.1" }
embedded-layout = "0.4"
embedded-storage = "0.3.1"


# Touch Screen Driver
ft5336 = "0.2.0"
# Memory
heapless = "0.9.1"
hmac = "0.12.1"

kolibri-embedded-gui = { git = "https://github.com/Yandrik/kolibri", branch = "main" }
nb = "1.0.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
sha2 = { version = "0.10.8", default-features = false }
static_cell = "2"


stm32-fmc = "0.4.0"

[profile.release]
debug = 2
lto = "fat"
opt-level="s"

